compiler/src/test/resources/golden/errors/prop_on_non_option.dawn
fn f(n: Int) -> Option[Int] = {
  let x = n?
  Some(x)
}
