compiler/src/test/resources/golden/errors/prop_on_non_option.err
error: `?` needs an Option or Result, got Int
  --> prop_on_non_option.dawn:2:11
  |
2 |   let x = n?
  |           ^^
  = hint: `?` unwraps an Option or Result and early-returns on None/Err; this value is neither
